--- a/stylesheet.css
+++ b/stylesheet.css
@@ -46,18 +46,22 @@ div{
 /*Styling of input*/
 input{
     border-radius: 20px;
-    width: 25rem;
+    width: 30rem;
     padding: 10px;
 
     border: 1px solid hsl(223, 100%, 88%);
 }
 
-input[type="email"]:active{
-    border: 1px solid hsl(223, 100%, 88%);
-}
 
 .subscribe-email{
-    flex-direction: row;
+    display: block;
+}
+
+.error-message{
+    display: none;
+    color: hsl(354, 100%, 66%);
+    font-size: 14px;
+    padding-left: 5px;
 }
 
 /*Styling of notify-me button*/
@@ -73,12 +77,16 @@ input[type="email"]:active{
     font-weight: 600;
 
     border: none;
+
+ 
 }
 
 .notify-me:hover{
     background-color: hsl(209, 33%, 12%);
 
     box-shadow: 0 17px 50px 0 rgba(0,0,0,0.19);
+
+    cursor: pointer;
 }
 
 /*Styling of icon*/
@@ -96,11 +104,12 @@ footer{
     flex-direction: column;
     gap:1rem;
 
-    font-size: 14px;
+    font-size: 15px;
 }
 
 .icon-img i:hover{
     color:hsl(209, 33%, 12%);
+    
 }
 
 
